--- a/FRONTEND/src/styles/Appointmencontent.css
+++ b/FRONTEND/src/styles/Appointmencontent.css
@@ -118,7 +118,7 @@
     margin-bottom: 80px;
     transform: translateX(-50%);
     color: white;
-    background-color: #509CAB; 
+    background-color: #7FB3D5; 
     border: 2px solid white; 
     padding: 8px 8px; 
     border-radius: 5px; 
