--- a/FRONTEND/src/styles/Appointmencontent.css
+++ b/FRONTEND/src/styles/Appointmencontent.css
@@ -105,7 +105,7 @@
     left: 10%; 
     transform: translateX(-50%);
     color: white;
-    background-color: #509CAB; 
+    background-color: #7FB3D5; 
     border: 2px solid white; 
     padding: 8px 8px; 
     border-radius: 5px; 
